minor table formatting edit

--- a/ms/invasibility-ms.tex
+++ b/ms/invasibility-ms.tex
@@ -568,103 +568,103 @@ reference & species group & site & easting & northing & height & age & bio01\tex
 \multicolumn{9}{l}{\rule{0pt}{1em}\textsuperscript{*} interpolated as the mean height of conspecific stands, inversely weighted by difference in age}\\
 \multicolumn{9}{l}{\rule{0pt}{1em}\textsuperscript{\dag} interpolated as the mean age of conspecific stands in the same region}\\
 \endlastfoot
-\cellcolor{gray!6}{Olsen et al. 2016} & \em{\cellcolor{gray!6}{Pinus contorta}} & \cellcolor{gray!6}{Fiskvikrokkdalen} & \cellcolor{gray!6}{292498} & \cellcolor{gray!6}{6843676} & \cellcolor{gray!6}{11} & \cellcolor{gray!6}{58} & \cellcolor{gray!6}{2.36} & \cellcolor{gray!6}{12.8}\\
+Olsen et al. 2016 & \em{Pinus contorta} & Fiskvikrokkdalen & 292498 & 6843676 & 11 & 58 & 2.36 & 12.8\\
 Olsen et al. 2016 & \em{Pinus contorta} & Gulemyrane & 94625 & 7000110 & 9\textsuperscript{*} & 42 & 7.22 & 48.0\\
-\cellcolor{gray!6}{Olsen et al. 2016} & \em{\cellcolor{gray!6}{Pinus contorta}} & \cellcolor{gray!6}{Selvik} & \cellcolor{gray!6}{74593} & \cellcolor{gray!6}{6978018} & \cellcolor{gray!6}{8} & \cellcolor{gray!6}{45} & \cellcolor{gray!6}{7.25} & \cellcolor{gray!6}{40.0}\\
+Olsen et al. 2016 & \em{Pinus contorta} & Selvik & 74593 & 6978018 & 8 & 45 & 7.25 & 40.0\\
 Olsen et al. 2016 & \em{Pinus contorta} & Skarsheia & 78833 & 6979095 & 6 & 45 & 6.60 & 36.7\\
-\cellcolor{gray!6}{Olsen et al. 2016} & \em{\cellcolor{gray!6}{Pinus contorta}} & \cellcolor{gray!6}{Sollitangen} & \cellcolor{gray!6}{260896} & \cellcolor{gray!6}{6859024} & \cellcolor{gray!6}{12} & \cellcolor{gray!6}{37} & \cellcolor{gray!6}{2.60} & \cellcolor{gray!6}{6.7}\\
+Olsen et al. 2016 & \em{Pinus contorta} & Sollitangen & 260896 & 6859024 & 12 & 37 & 2.60 & 6.7\\
 \addlinespace
 Olsen et al. 2016 & \em{Pinus contorta} & Tomasmyra & 260694 & 6864426 & 12 & 29 & 2.44 & 6.2\\
-\cellcolor{gray!6}{Olsen et al. 2016} & \em{\cellcolor{gray!6}{Picea sitchensis / lutzii}} & \cellcolor{gray!6}{Gryttingdalen-vest} & \cellcolor{gray!6}{503887} & \cellcolor{gray!6}{7613803} & \cellcolor{gray!6}{8} & \cellcolor{gray!6}{52} & \cellcolor{gray!6}{4.56} & \cellcolor{gray!6}{49.0}\\
+Olsen et al. 2016 & \em{Picea sitchensis / lutzii} & Gryttingdalen-vest & 503887 & 7613803 & 8 & 52 & 4.56 & 49.0\\
 Olsen et al. 2016 & \em{Picea sitchensis / lutzii} & Gryttingdalen-oest & 504335 & 7613736 & 8 & 52 & 4.50 & 50.5\\
-\cellcolor{gray!6}{Olsen et al. 2016} & \em{\cellcolor{gray!6}{Picea sitchensis / lutzii}} & \cellcolor{gray!6}{Holmsnes-nordvest} & \cellcolor{gray!6}{493935} & \cellcolor{gray!6}{7609464} & \cellcolor{gray!6}{11} & \cellcolor{gray!6}{49} & \cellcolor{gray!6}{5.36} & \cellcolor{gray!6}{45.3}\\
+Olsen et al. 2016 & \em{Picea sitchensis / lutzii} & Holmsnes-nordvest & 493935 & 7609464 & 11 & 49 & 5.36 & 45.3\\
 Olsen et al. 2016 & \em{Picea sitchensis / lutzii} & Holmsnes-soeroest & 494675 & 7608420 & 11 & 45 & 5.46 & 44.0\\
 \addlinespace
-\cellcolor{gray!6}{Olsen et al. 2016} & \em{\cellcolor{gray!6}{Picea sitchensis / lutzii}} & \cellcolor{gray!6}{Hov} & \cellcolor{gray!6}{496920} & \cellcolor{gray!6}{7608739} & \cellcolor{gray!6}{11} & \cellcolor{gray!6}{56} & \cellcolor{gray!6}{5.22} & \cellcolor{gray!6}{50.9}\\
+Olsen et al. 2016 & \em{Picea sitchensis / lutzii} & Hov & 496920 & 7608739 & 11 & 56 & 5.22 & 50.9\\
 Olsen et al. 2016 & \em{Picea sitchensis / lutzii} & Raavollmarka & 499105 & 7608885 & 18 & 59 & 4.80 & 51.1\\
-\cellcolor{gray!6}{Appelgren and Torvik 2017} & \em{\cellcolor{gray!6}{Larix spp.}} & \cellcolor{gray!6}{Anisdal} & \cellcolor{gray!6}{-36439} & \cellcolor{gray!6}{6529890} & \cellcolor{gray!6}{22} & \cellcolor{gray!6}{56} & \cellcolor{gray!6}{7.37} & \cellcolor{gray!6}{38.8}\\
+Appelgren and Torvik 2017 & \em{Larix spp.} & Anisdal & -36439 & 6529890 & 22 & 56 & 7.37 & 38.8\\
 Appelgren and Torvik 2017 & \em{Larix spp.} & Haalandsbotn & -37108 & 6532830 & 20 & 57.5 & 7.00 & 38.9\\
-\cellcolor{gray!6}{Appelgren and Torvik 2017} & \em{\cellcolor{gray!6}{Larix spp.}} & \cellcolor{gray!6}{Roeynaasen} & \cellcolor{gray!6}{-31279} & \cellcolor{gray!6}{6547997} & \cellcolor{gray!6}{25} & \cellcolor{gray!6}{77.5} & \cellcolor{gray!6}{6.88} & \cellcolor{gray!6}{36.5}\\
+Appelgren and Torvik 2017 & \em{Larix spp.} & Roeynaasen & -31279 & 6547997 & 25 & 77.5 & 6.88 & 36.5\\
 \addlinespace
 Appelgren and Torvik 2017 & \em{Larix spp.} & Storemo & -107 & 6588189 & 23 & 60 & 7.15 & 33.0\\
-\cellcolor{gray!6}{Appelgren and Torvik 2017} & \em{\cellcolor{gray!6}{Larix spp.}} & \cellcolor{gray!6}{Toegjefjellet} & \cellcolor{gray!6}{-22293} & \cellcolor{gray!6}{6546411} & \cellcolor{gray!6}{20} & \cellcolor{gray!6}{60} & \cellcolor{gray!6}{6.69} & \cellcolor{gray!6}{39.6}\\
+Appelgren and Torvik 2017 & \em{Larix spp.} & Toegjefjellet & -22293 & 6546411 & 20 & 60 & 6.69 & 39.6\\
 Appelgren and Torvik 2017 & \em{Larix spp.} & Voren & -26899 & 6554824 & 20 & 62 & 6.42 & 39.6\\
-\cellcolor{gray!6}{Appelgren and Torvik 2017} & \em{\cellcolor{gray!6}{Picea abies}} & \cellcolor{gray!6}{Mysingveien} & \cellcolor{gray!6}{-10547} & \cellcolor{gray!6}{6522150} & \cellcolor{gray!6}{21} & \cellcolor{gray!6}{52} & \cellcolor{gray!6}{6.34} & \cellcolor{gray!6}{53.9}\\
+Appelgren and Torvik 2017 & \em{Picea abies} & Mysingveien & -10547 & 6522150 & 21 & 52 & 6.34 & 53.9\\
 Appelgren and Torvik 2017 & \em{Picea abies} & Ollestad & -2440 & 6519912 & 20\textsuperscript{*} & 58 & 6.76 & 42.5\\
 \addlinespace
-\cellcolor{gray!6}{Appelgren and Torvik 2017} & \em{\cellcolor{gray!6}{Picea abies}} & \cellcolor{gray!6}{Varland} & \cellcolor{gray!6}{-15600} & \cellcolor{gray!6}{6584801} & \cellcolor{gray!6}{22} & \cellcolor{gray!6}{60} & \cellcolor{gray!6}{6.94} & \cellcolor{gray!6}{36.2}\\
+Appelgren and Torvik 2017 & \em{Picea abies} & Varland & -15600 & 6584801 & 22 & 60 & 6.94 & 36.2\\
 Appelgren and Torvik 2017 & \em{Picea sitchensis / lutzii} & Dale & -30398 & 6586913 & 25 & 77 & 7.10 & 40.6\\
-\cellcolor{gray!6}{Appelgren and Torvik 2017} & \em{\cellcolor{gray!6}{Picea sitchensis / lutzii}} & \cellcolor{gray!6}{Fjoesne} & \cellcolor{gray!6}{-11052} & \cellcolor{gray!6}{6650525} & \cellcolor{gray!6}{22} & \cellcolor{gray!6}{50} & \cellcolor{gray!6}{6.11} & \cellcolor{gray!6}{60.1}\\
+Appelgren and Torvik 2017 & \em{Picea sitchensis / lutzii} & Fjoesne & -11052 & 6650525 & 22 & 50 & 6.11 & 60.1\\
 Appelgren and Torvik 2017 & \em{Picea sitchensis / lutzii} & Kvia & -42603 & 6539369 & 20 & 57.5 & 8.02 & 30.6\\
-\cellcolor{gray!6}{Appelgren and Torvik 2017} & \em{\cellcolor{gray!6}{Picea sitchensis / lutzii}} & \cellcolor{gray!6}{Roeynaasen} & \cellcolor{gray!6}{-31321} & \cellcolor{gray!6}{6548005} & \cellcolor{gray!6}{23} & \cellcolor{gray!6}{77.5} & \cellcolor{gray!6}{6.88} & \cellcolor{gray!6}{36.5}\\
+Appelgren and Torvik 2017 & \em{Picea sitchensis / lutzii} & Roeynaasen & -31321 & 6548005 & 23 & 77.5 & 6.88 & 36.5\\
 \addlinespace
 Appelgren and Torvik 2017 & \em{Picea sitchensis / lutzii} & Toegjefjellet & -22347 & 6546467 & 20 & 60 & 6.69 & 39.6\\
-\cellcolor{gray!6}{Appelgren and Torvik 2017} & \em{\cellcolor{gray!6}{Picea sitchensis / lutzii}} & \cellcolor{gray!6}{Voren} & \cellcolor{gray!6}{-26991} & \cellcolor{gray!6}{6554850} & \cellcolor{gray!6}{18} & \cellcolor{gray!6}{52.5} & \cellcolor{gray!6}{6.42} & \cellcolor{gray!6}{39.6}\\
+Appelgren and Torvik 2017 & \em{Picea sitchensis / lutzii} & Voren & -26991 & 6554850 & 18 & 52.5 & 6.42 & 39.6\\
 Appelgren and Torvik 2017 & \em{Picea sitchensis / lutzii} & Aarheia & -33443 & 6589861 & 28 & 60 & 7.31 & 38.2\\
-\cellcolor{gray!6}{Kyrkjeeide et al. 2017} & \em{\cellcolor{gray!6}{Picea abies}} & \cellcolor{gray!6}{Myklebostad} & \cellcolor{gray!6}{481205} & \cellcolor{gray!6}{7469940} & \cellcolor{gray!6}{20\textsuperscript{*}} & \cellcolor{gray!6}{97} & \cellcolor{gray!6}{4.99} & \cellcolor{gray!6}{24.9}\\
+Kyrkjeeide et al. 2017 & \em{Picea abies} & Myklebostad & 481205 & 7469940 & 20\textsuperscript{*} & 97 & 4.99 & 24.9\\
 Kyrkjeeide et al. 2017 & \em{Picea abies} & Tennes & 668660 & 7695332 & 20\textsuperscript{*} & 87 & 1.87 & 18.6\\
 \addlinespace
-\cellcolor{gray!6}{Kyrkjeeide et al. 2017} & \em{\cellcolor{gray!6}{Picea sitchensis / lutzii}} & \cellcolor{gray!6}{Hagheia} & \cellcolor{gray!6}{445925} & \cellcolor{gray!6}{7560670} & \cellcolor{gray!6}{18\textsuperscript{*}} & \cellcolor{gray!6}{55} & \cellcolor{gray!6}{4.89} & \cellcolor{gray!6}{49.4}\\
+Kyrkjeeide et al. 2017 & \em{Picea sitchensis / lutzii} & Hagheia & 445925 & 7560670 & 18\textsuperscript{*} & 55 & 4.89 & 49.4\\
 Kyrkjeeide et al. 2017 & \em{Picea sitchensis / lutzii} & Harteigen & 449285 & 7559665 & 15\textsuperscript{*} & 51.5 & 5.38 & 48.4\\
-\cellcolor{gray!6}{Kyrkjeeide et al. 2017} & \em{\cellcolor{gray!6}{Picea sitchensis / lutzii}} & \cellcolor{gray!6}{Haakoeya} & \cellcolor{gray!6}{647074} & \cellcolor{gray!6}{7731726} & \cellcolor{gray!6}{17\textsuperscript{*}} & \cellcolor{gray!6}{42\textsuperscript{\dag}} & \cellcolor{gray!6}{3.16} & \cellcolor{gray!6}{30.0}\\
+Kyrkjeeide et al. 2017 & \em{Picea sitchensis / lutzii} & Haakoeya & 647074 & 7731726 & 17\textsuperscript{*} & 42\textsuperscript{\dag} & 3.16 & 30.0\\
 Appelgren 2018 & \em{Larix spp.} & Engjane & -34540 & 6529860 & 15 & 45 & 7.19 & 40.3\\
-\cellcolor{gray!6}{Appelgren 2018} & \em{\cellcolor{gray!6}{Larix spp.}} & \cellcolor{gray!6}{Hyljafjellet} & \cellcolor{gray!6}{-34030} & \cellcolor{gray!6}{6529963} & \cellcolor{gray!6}{15} & \cellcolor{gray!6}{45} & \cellcolor{gray!6}{7.30} & \cellcolor{gray!6}{39.6}\\
+Appelgren 2018 & \em{Larix spp.} & Hyljafjellet & -34030 & 6529963 & 15 & 45 & 7.30 & 39.6\\
 \addlinespace
 Appelgren 2018 & \em{Larix spp.} & Hoegaas & -25415 & 6560056 & 20 & 57.5 & 6.77 & 38.8\\
-\cellcolor{gray!6}{Appelgren 2018} & \em{\cellcolor{gray!6}{Larix spp.}} & \cellcolor{gray!6}{Myrvoll} & \cellcolor{gray!6}{-12944} & \cellcolor{gray!6}{6522033} & \cellcolor{gray!6}{12} & \cellcolor{gray!6}{17.5} & \cellcolor{gray!6}{7.06} & \cellcolor{gray!6}{43.4}\\
+Appelgren 2018 & \em{Larix spp.} & Myrvoll & -12944 & 6522033 & 12 & 17.5 & 7.06 & 43.4\\
 Appelgren 2018 & \em{Larix spp.} & Oaland & -7652 & 6563045 & 17 & 52.5 & 5.48 & 49.7\\
-\cellcolor{gray!6}{Appelgren 2018} & \em{\cellcolor{gray!6}{Picea abies}} & \cellcolor{gray!6}{Efteland} & \cellcolor{gray!6}{-15304} & \cellcolor{gray!6}{6523548} & \cellcolor{gray!6}{20} & \cellcolor{gray!6}{45} & \cellcolor{gray!6}{6.69} & \cellcolor{gray!6}{53.8}\\
+Appelgren 2018 & \em{Picea abies} & Efteland & -15304 & 6523548 & 20 & 45 & 6.69 & 53.8\\
 Appelgren 2018 & \em{Picea abies} & Myrvoll & -13000 & 6522143 & 18 & 71.5 & 7.06 & 43.4\\
 \addlinespace
-\cellcolor{gray!6}{Appelgren 2018} & \em{\cellcolor{gray!6}{Picea sitchensis / lutzii}} & \cellcolor{gray!6}{Foersvoll} & \cellcolor{gray!6}{-29434} & \cellcolor{gray!6}{6588711} & \cellcolor{gray!6}{24} & \cellcolor{gray!6}{54} & \cellcolor{gray!6}{7.22} & \cellcolor{gray!6}{37.7}\\
+Appelgren 2018 & \em{Picea sitchensis / lutzii} & Foersvoll & -29434 & 6588711 & 24 & 54 & 7.22 & 37.7\\
 Appelgren 2018 & \em{Picea sitchensis / lutzii} & Hommeland & -17515 & 6559100 & 17 & 47 & 6.01 & 40.1\\
-\cellcolor{gray!6}{Appelgren 2018} & \em{\cellcolor{gray!6}{Picea sitchensis / lutzii}} & \cellcolor{gray!6}{Hyljafjellet} & \cellcolor{gray!6}{-34044} & \cellcolor{gray!6}{6529954} & \cellcolor{gray!6}{13.5} & \cellcolor{gray!6}{45} & \cellcolor{gray!6}{7.30} & \cellcolor{gray!6}{39.6}\\
+Appelgren 2018 & \em{Picea sitchensis / lutzii} & Hyljafjellet & -34044 & 6529954 & 13.5 & 45 & 7.30 & 39.6\\
 Appelgren 2018 & \em{Picea sitchensis / lutzii} & Oaland & -7648 & 6563033 & 15 & 52.5 & 5.48 & 49.7\\
-\cellcolor{gray!6}{Appelgren 2018} & \em{\cellcolor{gray!6}{Picea sitchensis / lutzii}} & \cellcolor{gray!6}{Sandve} & \cellcolor{gray!6}{-58701} & \cellcolor{gray!6}{6601600} & \cellcolor{gray!6}{11} & \cellcolor{gray!6}{30} & \cellcolor{gray!6}{7.83} & \cellcolor{gray!6}{38.8}\\
+Appelgren 2018 & \em{Picea sitchensis / lutzii} & Sandve & -58701 & 6601600 & 11 & 30 & 7.83 & 38.8\\
 \addlinespace
 Appelgren 2018 & \em{Picea sitchensis / lutzii} & Skorphella & -30767 & 6581293 & 13 & 35 & 7.87 & 31.3\\
-\cellcolor{gray!6}{Appelgren 2018} & \em{\cellcolor{gray!6}{Picea sitchensis / lutzii}} & \cellcolor{gray!6}{Starebakkane} & \cellcolor{gray!6}{-43287} & \cellcolor{gray!6}{6563381} & \cellcolor{gray!6}{18} & \cellcolor{gray!6}{52.5} & \cellcolor{gray!6}{8.08} & \cellcolor{gray!6}{27.9}\\
+Appelgren 2018 & \em{Picea sitchensis / lutzii} & Starebakkane & -43287 & 6563381 & 18 & 52.5 & 8.08 & 27.9\\
 Appelgren 2018 & \em{Picea sitchensis / lutzii} & Veggjaberget & -35788 & 6526000 & 12 & 27.5 & 8.04 & 35.0\\
-\cellcolor{gray!6}{Appelgren 2018} & \em{\cellcolor{gray!6}{Picea sitchensis / lutzii}} & \cellcolor{gray!6}{Vikra} & \cellcolor{gray!6}{-59126} & \cellcolor{gray!6}{6601266} & \cellcolor{gray!6}{22\textsuperscript{*}} & \cellcolor{gray!6}{78} & \cellcolor{gray!6}{7.97} & \cellcolor{gray!6}{37.5}\\
+Appelgren 2018 & \em{Picea sitchensis / lutzii} & Vikra & -59126 & 6601266 & 22\textsuperscript{*} & 78 & 7.97 & 37.5\\
 Olsen et al. 2019 & \em{Larix spp.} & Stordalslia & 418827 & 7303180 & 11.9 & 16.5 & 4.62 & 52.2\\
 \addlinespace
-\cellcolor{gray!6}{Olsen et al. 2019} & \em{\cellcolor{gray!6}{Picea abies}} & \cellcolor{gray!6}{Storbergan} & \cellcolor{gray!6}{413255} & \cellcolor{gray!6}{7349964} & \cellcolor{gray!6}{13.1} & \cellcolor{gray!6}{49} & \cellcolor{gray!6}{5.02} & \cellcolor{gray!6}{55.6}\\
+Olsen et al. 2019 & \em{Picea abies} & Storbergan & 413255 & 7349964 & 13.1 & 49 & 5.02 & 55.6\\
 Olsen et al. 2019 & \em{Picea abies} & Svinnes & 385625 & 7306386 & 15.3 & 36.5 & 5.57 & 41.0\\
-\cellcolor{gray!6}{Olsen et al. 2019} & \em{\cellcolor{gray!6}{Picea sitchensis / lutzii}} & \cellcolor{gray!6}{Alstahaugmyran} & \cellcolor{gray!6}{382564} & \cellcolor{gray!6}{7311547} & \cellcolor{gray!6}{15.7} & \cellcolor{gray!6}{31.5} & \cellcolor{gray!6}{5.49} & \cellcolor{gray!6}{45.7}\\
+Olsen et al. 2019 & \em{Picea sitchensis / lutzii} & Alstahaugmyran & 382564 & 7311547 & 15.7 & 31.5 & 5.49 & 45.7\\
 Olsen et al. 2019 & \em{Picea sitchensis / lutzii} & Hamran & 373448 & 7266074 & 17.2 & 26 & 5.69 & 42.3\\
-\cellcolor{gray!6}{Olsen et al. 2019} & \em{\cellcolor{gray!6}{Picea sitchensis / lutzii}} & \cellcolor{gray!6}{Langvassfjellet} & \cellcolor{gray!6}{409484} & \cellcolor{gray!6}{7330371} & \cellcolor{gray!6}{17.6} & \cellcolor{gray!6}{36.5} & \cellcolor{gray!6}{4.87} & \cellcolor{gray!6}{54.0}\\
+Olsen et al. 2019 & \em{Picea sitchensis / lutzii} & Langvassfjellet & 409484 & 7330371 & 17.6 & 36.5 & 4.87 & 54.0\\
 \addlinespace
 Olsen et al. 2019 & \em{Picea sitchensis / lutzii} & Meaasen & 386111 & 7333724 & 14.1 & 43.5 & 5.70 & 34.5\\
-\cellcolor{gray!6}{Olsen et al. 2019} & \em{\cellcolor{gray!6}{Picea sitchensis / lutzii}} & \cellcolor{gray!6}{Myrmo} & \cellcolor{gray!6}{391075} & \cellcolor{gray!6}{7321058} & \cellcolor{gray!6}{18.8} & \cellcolor{gray!6}{37} & \cellcolor{gray!6}{5.22} & \cellcolor{gray!6}{37.4}\\
+Olsen et al. 2019 & \em{Picea sitchensis / lutzii} & Myrmo & 391075 & 7321058 & 18.8 & 37 & 5.22 & 37.4\\
 Olsen et al. 2019 & \em{Picea sitchensis / lutzii} & Olabergan & 410600 & 7341996 & 18.8 & 29 & 5.31 & 45.0\\
-\cellcolor{gray!6}{Olsen et al. 2019} & \em{\cellcolor{gray!6}{Picea sitchensis / lutzii}} & \cellcolor{gray!6}{Plogskjaeret} & \cellcolor{gray!6}{378814} & \cellcolor{gray!6}{7280849} & \cellcolor{gray!6}{16.1} & \cellcolor{gray!6}{26} & \cellcolor{gray!6}{5.57} & \cellcolor{gray!6}{43.5}\\
+Olsen et al. 2019 & \em{Picea sitchensis / lutzii} & Plogskjaeret & 378814 & 7280849 & 16.1 & 26 & 5.57 & 43.5\\
 Olsen et al. 2019 & \em{Picea sitchensis / lutzii} & Sandmoan & 382107 & 7329122 & 10.8 & 33 & 5.73 & 33.7\\
 \addlinespace
-\cellcolor{gray!6}{Olsen et al. 2019} & \em{\cellcolor{gray!6}{Picea sitchensis / lutzii}} & \cellcolor{gray!6}{Steinaasen} & \cellcolor{gray!6}{375834} & \cellcolor{gray!6}{7274496} & \cellcolor{gray!6}{17.9} & \cellcolor{gray!6}{35} & \cellcolor{gray!6}{5.50} & \cellcolor{gray!6}{37.6}\\
+Olsen et al. 2019 & \em{Picea sitchensis / lutzii} & Steinaasen & 375834 & 7274496 & 17.9 & 35 & 5.50 & 37.6\\
 Olsen et al. 2019 & \em{Picea sitchensis / lutzii} & Svinnes & 385652 & 7306426 & 16.4 & 37.5 & 5.65 & 40.1\\
-\cellcolor{gray!6}{Olsen et al. 2019} & \em{\cellcolor{gray!6}{Picea sitchensis / lutzii}} & \cellcolor{gray!6}{Valan} & \cellcolor{gray!6}{383545} & \cellcolor{gray!6}{7304119} & \cellcolor{gray!6}{15.5} & \cellcolor{gray!6}{35} & \cellcolor{gray!6}{5.61} & \cellcolor{gray!6}{41.5}\\
+Olsen et al. 2019 & \em{Picea sitchensis / lutzii} & Valan & 383545 & 7304119 & 15.5 & 35 & 5.61 & 41.5\\
 Sandven et al. 2019 & \em{Larix spp.} & Ytre-bjotveit & 49799 & 6729344 & 19.4 & 72 & 5.52 & 34.5\\
-\cellcolor{gray!6}{Sandven et al. 2019} & \em{\cellcolor{gray!6}{Larix spp.}} & \cellcolor{gray!6}{Knappeidet} & \cellcolor{gray!6}{-47542} & \cellcolor{gray!6}{6737678} & \cellcolor{gray!6}{17.2} & \cellcolor{gray!6}{32} & \cellcolor{gray!6}{7.99} & \cellcolor{gray!6}{39.4}\\
+Sandven et al. 2019 & \em{Larix spp.} & Knappeidet & -47542 & 6737678 & 17.2 & 32 & 7.99 & 39.4\\
 \addlinespace
 Sandven et al. 2019 & \em{Larix spp.} & Indre-bjotveit & 51174 & 6730928 & 24.5 & 84 & 5.82 & 35.9\\
-\cellcolor{gray!6}{Sandven et al. 2019} & \em{\cellcolor{gray!6}{Picea abies}} & \cellcolor{gray!6}{Boerve} & \cellcolor{gray!6}{37746} & \cellcolor{gray!6}{6711673} & \cellcolor{gray!6}{31.9} & \cellcolor{gray!6}{64} & \cellcolor{gray!6}{5.49} & \cellcolor{gray!6}{46.6}\\
+Sandven et al. 2019 & \em{Picea abies} & Boerve & 37746 & 6711673 & 31.9 & 64 & 5.49 & 46.6\\
 Sandven et al. 2019 & \em{Picea abies} & Skare & 31612 & 6676392 & 22 & 66 & 4.41 & 50.6\\
-\cellcolor{gray!6}{Sandven et al. 2019} & \em{\cellcolor{gray!6}{Picea abies}} & \cellcolor{gray!6}{Oeystese} & \cellcolor{gray!6}{16634} & \cellcolor{gray!6}{6726920} & \cellcolor{gray!6}{15.6} & \cellcolor{gray!6}{57} & \cellcolor{gray!6}{6.42} & \cellcolor{gray!6}{67.4}\\
+Sandven et al. 2019 & \em{Picea abies} & Oeystese & 16634 & 6726920 & 15.6 & 57 & 6.42 & 67.4\\
 Sandven et al. 2019 & \em{Picea abies} & Vasshjallane & 65573 & 6728437 & 22.8 & 56 & 5.53 & 29.8\\
 \addlinespace
-\cellcolor{gray!6}{Sandven et al. 2019} & \em{\cellcolor{gray!6}{Picea abies}} & \cellcolor{gray!6}{Hjelmtveit} & \cellcolor{gray!6}{-31407} & \cellcolor{gray!6}{6756542} & \cellcolor{gray!6}{21.4} & \cellcolor{gray!6}{57} & \cellcolor{gray!6}{7.15} & \cellcolor{gray!6}{57.3}\\
+Sandven et al. 2019 & \em{Picea abies} & Hjelmtveit & -31407 & 6756542 & 21.4 & 57 & 7.15 & 57.3\\
 Sandven et al. 2019 & \em{Picea abies} & Bondhusdalen & 15726 & 6695404 & 16.2 & 55 & 5.67 & 44.0\\
-\cellcolor{gray!6}{Sandven et al. 2019} & \em{\cellcolor{gray!6}{Picea abies}} & \cellcolor{gray!6}{Saeboe} & \cellcolor{gray!6}{-36690} & \cellcolor{gray!6}{6759365} & \cellcolor{gray!6}{21.2} & \cellcolor{gray!6}{51} & \cellcolor{gray!6}{7.07} & \cellcolor{gray!6}{59.8}\\
+Sandven et al. 2019 & \em{Picea abies} & Saeboe & -36690 & 6759365 & 21.2 & 51 & 7.07 & 59.8\\
 Sandven et al. 2019 & \em{Picea abies} & Indre-arna & -25457 & 6738087 & 14.4 & 52 & 6.94 & 45.2\\
-\cellcolor{gray!6}{Sandven et al. 2019} & \em{\cellcolor{gray!6}{Picea abies}} & \cellcolor{gray!6}{Kvamskogen} & \cellcolor{gray!6}{4982} & \cellcolor{gray!6}{6726838} & \cellcolor{gray!6}{20.4} & \cellcolor{gray!6}{101} & \cellcolor{gray!6}{4.98} & \cellcolor{gray!6}{57.1}\\
+Sandven et al. 2019 & \em{Picea abies} & Kvamskogen & 4982 & 6726838 & 20.4 & 101 & 4.98 & 57.1\\
 \addlinespace
 Sandven et al. 2019 & \em{Picea abies} & Rosendal & -1965 & 6685031 & 16.8 & 49 & 6.94 & 55.3\\
-\cellcolor{gray!6}{Sandven et al. 2019} & \em{\cellcolor{gray!6}{Picea sitchensis / lutzii}} & \cellcolor{gray!6}{Midtre-fjell} & \cellcolor{gray!6}{-47585} & \cellcolor{gray!6}{6729572} & \cellcolor{gray!6}{23.5} & \cellcolor{gray!6}{50} & \cellcolor{gray!6}{7.74} & \cellcolor{gray!6}{44.8}\\
+Sandven et al. 2019 & \em{Picea sitchensis / lutzii} & Midtre-fjell & -47585 & 6729572 & 23.5 & 50 & 7.74 & 44.8\\
 Sandven et al. 2019 & \em{Picea sitchensis / lutzii} & Oevre-manger & -43485 & 6764574 & 17.5 & 46 & 7.78 & 53.3\\
-\cellcolor{gray!6}{Sandven et al. 2019} & \em{\cellcolor{gray!6}{Picea sitchensis / lutzii}} & \cellcolor{gray!6}{Fuglavasstoppen} & \cellcolor{gray!6}{-50243} & \cellcolor{gray!6}{6740596} & \cellcolor{gray!6}{19.5} & \cellcolor{gray!6}{48} & \cellcolor{gray!6}{7.86} & \cellcolor{gray!6}{46.0}\\
+Sandven et al. 2019 & \em{Picea sitchensis / lutzii} & Fuglavasstoppen & -50243 & 6740596 & 19.5 & 48 & 7.86 & 46.0\\
 Sandven et al. 2019 & \em{Picea sitchensis / lutzii} & Kvitefjella & -48847 & 6730154 & 21.1 & 50 & 7.57 & 47.6\\
 \addlinespace
-\cellcolor{gray!6}{Sandven et al. 2019} & \em{\cellcolor{gray!6}{Picea sitchensis / lutzii}} & \cellcolor{gray!6}{Kausland} & \cellcolor{gray!6}{-50236} & \cellcolor{gray!6}{6718477} & \cellcolor{gray!6}{22.2} & \cellcolor{gray!6}{44} & \cellcolor{gray!6}{7.84} & \cellcolor{gray!6}{46.2}\\
+Sandven et al. 2019 & \em{Picea sitchensis / lutzii} & Kausland & -50236 & 6718477 & 22.2 & 44 & 7.84 & 46.2\\
 Sandven et al. 2019 & \em{Picea sitchensis / lutzii} & Misje & -51009 & 6743828 & 20.8 & 54 & 7.99 & 45.1\\*
 \end{longtable}
 \end{landscape}
@@ -686,52 +686,52 @@ type & code & category & structuring & vegetation height\textsuperscript{a}\\
 \bottomrule
 \multicolumn{5}{l}{\rule{0pt}{1em}\textsuperscript{a} approximate vegetation heights (meters) are used only to estimate wind turbulence}\\
 \endlastfoot
-\cellcolor{gray!6}{bare rock} & \cellcolor{gray!6}{T1} & \cellcolor{gray!6}{terrestrial} & \cellcolor{gray!6}{} & \cellcolor{gray!6}{0.0}\\
+bare rock & T1 & terrestrial &  & 0.0\\
 open shallow-soil ground & T2 & terrestrial &  & 0.5\\
-\cellcolor{gray!6}{arctic-alpine heath and lee side} & \cellcolor{gray!6}{T3} & \cellcolor{gray!6}{terrestrial} & \cellcolor{gray!6}{} & \cellcolor{gray!6}{0.5}\\
+arctic-alpine heath and lee side & T3 & terrestrial &  & 0.5\\
 forest & T4 & terrestrial &  & 10.0\\
-\cellcolor{gray!6}{rocky shore} & \cellcolor{gray!6}{T6} & \cellcolor{gray!6}{terrestrial} & \cellcolor{gray!6}{environmental stress} & \cellcolor{gray!6}{0.0}\\
+rocky shore & T6 & terrestrial & environmental stress & 0.0\\
 \addlinespace
 tidal meadow & T12 & terrestrial & environmental stress & 0.5\\
-\cellcolor{gray!6}{bare talus slope} & \cellcolor{gray!6}{T13} & \cellcolor{gray!6}{terrestrial} & \cellcolor{gray!6}{regulating disturbance} & \cellcolor{gray!6}{0.0}\\
+bare talus slope & T13 & terrestrial & regulating disturbance & 0.0\\
 talus-slope heath and meadow & T16 & terrestrial & regulating disturbance & 0.5\\
-\cellcolor{gray!6}{open active landslide} & \cellcolor{gray!6}{T17} & \cellcolor{gray!6}{terrestrial} & \cellcolor{gray!6}{destabilizing disturbance} & \cellcolor{gray!6}{0.0}\\
+open active landslide & T17 & terrestrial & destabilizing disturbance & 0.0\\
 open alluvial sediment & T18 & terrestrial & destabilizing disturbance & 0.0\\
 \addlinespace
-\cellcolor{gray!6}{sand dune} & \cellcolor{gray!6}{T21} & \cellcolor{gray!6}{terrestrial} & \cellcolor{gray!6}{destabilizing disturbance} & \cellcolor{gray!6}{0.0}\\
+sand dune & T21 & terrestrial & destabilizing disturbance & 0.0\\
 coastal driftline & T24 & terrestrial & destabilizing disturbance & 0.5\\
-\cellcolor{gray!6}{boulder field} & \cellcolor{gray!6}{T27} & \cellcolor{gray!6}{terrestrial} & \cellcolor{gray!6}{regulating disturbance} & \cellcolor{gray!6}{0.0}\\
+boulder field & T27 & terrestrial & regulating disturbance & 0.0\\
 coastal shingle beach & T29 & terrestrial & regulating disturbance & 0.0\\
-\cellcolor{gray!6}{alluvial forest} & \cellcolor{gray!6}{T30} & \cellcolor{gray!6}{terrestrial} & \cellcolor{gray!6}{destabilizing disturbance} & \cellcolor{gray!6}{10.0}\\
+alluvial forest & T30 & terrestrial & destabilizing disturbance & 10.0\\
 \addlinespace
 boreal heath & T31 & terrestrial & moderate anthropogenic disturbance & 0.5\\
-\cellcolor{gray!6}{semi-natural grassland} & \cellcolor{gray!6}{T32} & \cellcolor{gray!6}{terrestrial} & \cellcolor{gray!6}{moderate anthropogenic disturbance} & \cellcolor{gray!6}{0.5}\\
+semi-natural grassland & T32 & terrestrial & moderate anthropogenic disturbance & 0.5\\
 semi-natural tidal and salt meadow & T33 & terrestrial & moderate anthropogenic disturbance & 0.5\\
-\cellcolor{gray!6}{coastal heath} & \cellcolor{gray!6}{T34} & \cellcolor{gray!6}{terrestrial} & \cellcolor{gray!6}{moderate anthropogenic disturbance} & \cellcolor{gray!6}{0.5}\\
+coastal heath & T34 & terrestrial & moderate anthropogenic disturbance & 0.5\\
 artificial substrate & T35 & terrestrial & strong anthropogenic disturbance & 0.0\\
 \addlinespace
-\cellcolor{gray!6}{artificial substrate} & \cellcolor{gray!6}{T37} & \cellcolor{gray!6}{terrestrial} & \cellcolor{gray!6}{strong anthropogenic disturbance} & \cellcolor{gray!6}{0.0}\\
+artificial substrate & T37 & terrestrial & strong anthropogenic disturbance & 0.0\\
 artificial substrate & T39 & terrestrial & strong anthropogenic disturbance & 0.0\\
-\cellcolor{gray!6}{artificial substrate} & \cellcolor{gray!6}{T43} & \cellcolor{gray!6}{terrestrial} & \cellcolor{gray!6}{strong anthropogenic disturbance} & \cellcolor{gray!6}{0.0}\\
+artificial substrate & T43 & terrestrial & strong anthropogenic disturbance & 0.0\\
 drained wetland and terrestrialized freshwater sediment & T36 & terrestrial & strong anthropogenic disturbance & 0.5\\
-\cellcolor{gray!6}{tree plantation} & \cellcolor{gray!6}{T38} & \cellcolor{gray!6}{terrestrial} & \cellcolor{gray!6}{strong anthropogenic disturbance} & \cellcolor{gray!6}{10.0}\\
+tree plantation & T38 & terrestrial & strong anthropogenic disturbance & 10.0\\
 \addlinespace
 strongly altered ground with semi-natural grassland character & T40 & terrestrial & strong anthropogenic disturbance & 0.0\\
-\cellcolor{gray!6}{agriculturally improved grassland with semi-natural character} & \cellcolor{gray!6}{T41} & \cellcolor{gray!6}{terrestrial} & \cellcolor{gray!6}{strong anthropogenic disturbance} & \cellcolor{gray!6}{0.5}\\
+agriculturally improved grassland with semi-natural character & T41 & terrestrial & strong anthropogenic disturbance & 0.5\\
 landscaped patch or field & T42 & terrestrial & strong anthropogenic disturbance & 0.0\\
-\cellcolor{gray!6}{arable field} & \cellcolor{gray!6}{T44} & \cellcolor{gray!6}{terrestrial} & \cellcolor{gray!6}{strong anthropogenic disturbance} & \cellcolor{gray!6}{0.5}\\
+arable field & T44 & terrestrial & strong anthropogenic disturbance & 0.5\\
 agriculturally improved grassland & T45 & terrestrial & strong anthropogenic disturbance & 0.5\\
 \addlinespace
-\cellcolor{gray!6}{open fen} & \cellcolor{gray!6}{V1} & \cellcolor{gray!6}{wetland} & \cellcolor{gray!6}{} & \cellcolor{gray!6}{0.0}\\
+open fen & V1 & wetland &  & 0.0\\
 mire and swamp forest & V2 & wetland &  & 10.0\\
-\cellcolor{gray!6}{bog} & \cellcolor{gray!6}{V3} & \cellcolor{gray!6}{wetland} & \cellcolor{gray!6}{environmental stress} & \cellcolor{gray!6}{0.0}\\
+bog & V3 & wetland & environmental stress & 0.0\\
 spring & V4 & wetland & environmental stress & 0.0\\
-\cellcolor{gray!6}{tidal and alluvial swamp forest} & \cellcolor{gray!6}{V8} & \cellcolor{gray!6}{wetland} & \cellcolor{gray!6}{environmental stress} & \cellcolor{gray!6}{10.0}\\
+tidal and alluvial swamp forest & V8 & wetland & environmental stress & 10.0\\
 \addlinespace
 semi-natural fen & V9 & wetland & moderate anthropogenic disturbance & 0.0\\
-\cellcolor{gray!6}{semi-natural wet meadow} & \cellcolor{gray!6}{V10} & \cellcolor{gray!6}{wetland} & \cellcolor{gray!6}{moderate anthropogenic disturbance} & \cellcolor{gray!6}{0.0}\\
+semi-natural wet meadow & V10 & wetland & moderate anthropogenic disturbance & 0.0\\
 peat quarry & V11 & wetland & strong anthropogenic disturbance & 0.0\\
-\cellcolor{gray!6}{drained mire} & \cellcolor{gray!6}{V12} & \cellcolor{gray!6}{wetland} & \cellcolor{gray!6}{strong anthropogenic disturbance} & \cellcolor{gray!6}{0.0}\\
+drained mire & V12 & wetland & strong anthropogenic disturbance & 0.0\\
 artificial wetland & V13 & wetland & strong anthropogenic disturbance & 0.0\\*
 \end{longtable}
 \end{landscape}
