--- a/ms/invasibility-ms.Rmd
+++ b/ms/invasibility-ms.Rmd
@@ -476,7 +476,7 @@ locs <- locs %>%
 ```{r sites-table}
 kbl(locs, longtable = TRUE, align = "l", booktabs = TRUE, escape = FALSE, 
     caption = "\\label{tab:sites-table}Plantation stands") %>% 
-  kable_styling(latex_options =c("repeat_header","striped")) %>% 
+  kable_styling(latex_options =c("repeat_header")) %>% 
   column_spec(2, italic = TRUE) %>%
   footnote(general = "Easting and Northing are given for UTM zone 33N. Height is given in meters and age in years.",
            alphabet = c("mean annual temperature (°C)",
@@ -500,7 +500,7 @@ names(typestab)[5] <- paste0(names(typestab)[5], footnote_marker_alphabet(1))
 options(knitr.kable.NA = '')
 kbl(typestab, longtable = TRUE, booktabs = TRUE, escape = FALSE, 
     caption = "\\label{tab:types-table}Ecosystem types") %>% 
-  kable_styling(latex_options =c("repeat_header", "striped")) %>% 
+  kable_styling(latex_options =c("repeat_header")) %>% 
   footnote(alphabet = "approximate vegetation heights (meters) are used only to estimate wind turbulence") %>% 
   landscape()
 ```
