--- a/ms/invasibility-ms.tex
+++ b/ms/invasibility-ms.tex
@@ -799,45 +799,45 @@ Term & Estimate & 95\% CI & SD (Intercept) & N\\
 \midrule
 \addlinespace[0.3em]
 \multicolumn{5}{l}{\textbf{Conditional model}}\\
-\hspace{1em}\cellcolor{gray!6}{Intercept} & \cellcolor{gray!6}{-1.80} & \cellcolor{gray!6}{-2.28, -1.31} & \cellcolor{gray!6}{} & \cellcolor{gray!6}{}\\
+\hspace{1em}Intercept & -1.80 & -2.28, -1.31 &  & \\
 \hspace{1em}age & -0.08 & -0.54, 0.38 &  & \\
-\hspace{1em}\cellcolor{gray!6}{bio01} & \cellcolor{gray!6}{0.54} & \cellcolor{gray!6}{0.01, 1.08} & \cellcolor{gray!6}{} & \cellcolor{gray!6}{}\\
+\hspace{1em}bio01 & 0.54 & 0.01, 1.08 &  & \\
 \hspace{1em}bio19 & -0.03 & -0.55, 0.5 &  & \\
-\hspace{1em}\cellcolor{gray!6}{relelev} & \cellcolor{gray!6}{-0.12} & \cellcolor{gray!6}{-0.19, -0.05} & \cellcolor{gray!6}{} & \cellcolor{gray!6}{}\\
+\hspace{1em}relelev & -0.12 & -0.19, -0.05 &  & \\
 \hspace{1em}T45 & -2.25 & -2.42, -2.08 &  & \\
-\hspace{1em}\cellcolor{gray!6}{artificial} & \cellcolor{gray!6}{-1.07} & \cellcolor{gray!6}{-1.27, -0.87} & \cellcolor{gray!6}{} & \cellcolor{gray!6}{}\\
+\hspace{1em}artificial & -1.07 & -1.27, -0.87 &  & \\
 \hspace{1em}T44 & -4.90 & -5.68, -4.12 &  & \\
-\hspace{1em}\cellcolor{gray!6}{T32} & \cellcolor{gray!6}{-1.24} & \cellcolor{gray!6}{-1.42, -1.06} & \cellcolor{gray!6}{} & \cellcolor{gray!6}{}\\
+\hspace{1em}T32 & -1.24 & -1.42, -1.06 &  & \\
 \hspace{1em}V9 & 0.84 & 0.63, 1.05 &  & \\
-\hspace{1em}\cellcolor{gray!6}{T34} & \cellcolor{gray!6}{0.15} & \cellcolor{gray!6}{0.01, 0.29} & \cellcolor{gray!6}{} & \cellcolor{gray!6}{}\\
+\hspace{1em}T34 & 0.15 & 0.01, 0.29 &  & \\
 \hspace{1em}V12 & -0.37 & -1.92, 1.19 &  & \\
-\hspace{1em}\cellcolor{gray!6}{V1} & \cellcolor{gray!6}{-0.37} & \cellcolor{gray!6}{-0.53, -0.22} & \cellcolor{gray!6}{} & \cellcolor{gray!6}{}\\
+\hspace{1em}V1 & -0.37 & -0.53, -0.22 &  & \\
 \hspace{1em}T13 & 2.13 & 0.57, 3.7 &  & \\
-\hspace{1em}\cellcolor{gray!6}{T41} & \cellcolor{gray!6}{-1.12} & \cellcolor{gray!6}{-1.44, -0.79} & \cellcolor{gray!6}{} & \cellcolor{gray!6}{}\\
+\hspace{1em}T41 & -1.12 & -1.44, -0.79 &  & \\
 \hspace{1em}T1 & -0.23 & -0.63, 0.16 &  & \\
-\hspace{1em}\cellcolor{gray!6}{V2} & \cellcolor{gray!6}{-1.29} & \cellcolor{gray!6}{-1.77, -0.82} & \cellcolor{gray!6}{} & \cellcolor{gray!6}{}\\
+\hspace{1em}V2 & -1.29 & -1.77, -0.82 &  & \\
 \hspace{1em}T2 & 0.24 & -0.12, 0.59 &  & \\
-\hspace{1em}\cellcolor{gray!6}{T40} & \cellcolor{gray!6}{0.19} & \cellcolor{gray!6}{-0.56, 0.94} & \cellcolor{gray!6}{} & \cellcolor{gray!6}{}\\
+\hspace{1em}T40 & 0.19 & -0.56, 0.94 &  & \\
 \hspace{1em}V10 & -2.94 & -5.22, -0.65 &  & \\
-\hspace{1em}\cellcolor{gray!6}{T27} & \cellcolor{gray!6}{1.66} & \cellcolor{gray!6}{1, 2.32} & \cellcolor{gray!6}{} & \cellcolor{gray!6}{}\\
+\hspace{1em}T27 & 1.66 & 1, 2.32 &  & \\
 \hspace{1em}T17 & 1.48 & 0.81, 2.14 &  & \\
-\hspace{1em}\cellcolor{gray!6}{T29} & \cellcolor{gray!6}{-4.86} & \cellcolor{gray!6}{-10.63, 0.9} & \cellcolor{gray!6}{} & \cellcolor{gray!6}{}\\
+\hspace{1em}T29 & -4.86 & -10.63, 0.9 &  & \\
 \hspace{1em}T16 & 2.08 & 1.31, 2.86 &  & \\
-\hspace{1em}\cellcolor{gray!6}{V8} & \cellcolor{gray!6}{-3.14} & \cellcolor{gray!6}{-9.58, 3.31} & \cellcolor{gray!6}{} & \cellcolor{gray!6}{}\\
+\hspace{1em}V8 & -3.14 & -9.58, 3.31 &  & \\
 \hspace{1em}T31 & 0.10 & -0.3, 0.5 &  & \\
-\hspace{1em}\cellcolor{gray!6}{V3} & \cellcolor{gray!6}{-0.67} & \cellcolor{gray!6}{-1.17, -0.18} & \cellcolor{gray!6}{} & \cellcolor{gray!6}{}\\
+\hspace{1em}V3 & -0.67 & -1.17, -0.18 &  & \\
 \hspace{1em}T6 & -1.07 & -2.02, -0.12 &  & \\
-\hspace{1em}\cellcolor{gray!6}{V13} & \cellcolor{gray!6}{-1.72} & \cellcolor{gray!6}{-5.06, 1.62} & \cellcolor{gray!6}{} & \cellcolor{gray!6}{}\\
+\hspace{1em}V13 & -1.72 & -5.06, 1.62 &  & \\
 \hspace{1em}T12 & 0.48 & -2.34, 3.29 &  & \\
-\hspace{1em}\cellcolor{gray!6}{T24} & \cellcolor{gray!6}{-3.55} & \cellcolor{gray!6}{-9.16, 2.06} & \cellcolor{gray!6}{} & \cellcolor{gray!6}{}\\
+\hspace{1em}T24 & -3.55 & -9.16, 2.06 &  & \\
 \hspace{1em}T21 & -1.33 & -3.06, 0.4 &  & \\
-\hspace{1em}\cellcolor{gray!6}{T36} & \cellcolor{gray!6}{2.26} & \cellcolor{gray!6}{1.28, 3.25} & \cellcolor{gray!6}{} & \cellcolor{gray!6}{}\\
+\hspace{1em}T36 & 2.26 & 1.28, 3.25 &  & \\
 \hspace{1em}site &  &  & 1.42 & 42\\
 \addlinespace[0.3em]
 \multicolumn{5}{l}{\textbf{Zero-inflation model}}\\
-\hspace{1em}\cellcolor{gray!6}{Intercept} & \cellcolor{gray!6}{0.39} & \cellcolor{gray!6}{-0.06, 0.84} & \cellcolor{gray!6}{} & \cellcolor{gray!6}{}\\
+\hspace{1em}Intercept & 0.39 & -0.06, 0.84 &  & \\
 \hspace{1em}age & -0.78 & -1.19, -0.36 &  & \\
-\hspace{1em}\cellcolor{gray!6}{site} & \cellcolor{gray!6}{} & \cellcolor{gray!6}{} & \cellcolor{gray!6}{1.19} & \cellcolor{gray!6}{42}\\
+\hspace{1em}site &  &  & 1.19 & 42\\
 \bottomrule
 \end{longtable}
 
@@ -850,33 +850,33 @@ Term & Estimate & 95\% CI & SD (Intercept) & N\\
 \midrule
 \addlinespace[0.3em]
 \multicolumn{5}{l}{\textbf{Conditional model}}\\
-\hspace{1em}\cellcolor{gray!6}{Intercept} & \cellcolor{gray!6}{-2.03} & \cellcolor{gray!6}{-2.49, -1.57} & \cellcolor{gray!6}{} & \cellcolor{gray!6}{}\\
+\hspace{1em}Intercept & -2.03 & -2.49, -1.57 &  & \\
 \hspace{1em}age & 0.02 & -0.45, 0.49 &  & \\
-\hspace{1em}\cellcolor{gray!6}{bio01} & \cellcolor{gray!6}{-0.13} & \cellcolor{gray!6}{-0.71, 0.44} & \cellcolor{gray!6}{} & \cellcolor{gray!6}{}\\
+\hspace{1em}bio01 & -0.13 & -0.71, 0.44 &  & \\
 \hspace{1em}bio19 & 0.55 & 0.03, 1.06 &  & \\
-\hspace{1em}\cellcolor{gray!6}{relelev} & \cellcolor{gray!6}{0.39} & \cellcolor{gray!6}{0.28, 0.5} & \cellcolor{gray!6}{} & \cellcolor{gray!6}{}\\
+\hspace{1em}relelev & 0.39 & 0.28, 0.5 &  & \\
 \hspace{1em}T45 & -6.34 & -7.5, -5.18 &  & \\
-\hspace{1em}\cellcolor{gray!6}{artificial} & \cellcolor{gray!6}{-0.86} & \cellcolor{gray!6}{-1.26, -0.46} & \cellcolor{gray!6}{} & \cellcolor{gray!6}{}\\
+\hspace{1em}artificial & -0.86 & -1.26, -0.46 &  & \\
 \hspace{1em}T44 & -7.14 & -13.24, -1.03 &  & \\
-\hspace{1em}\cellcolor{gray!6}{T32} & \cellcolor{gray!6}{-0.95} & \cellcolor{gray!6}{-1.23, -0.66} & \cellcolor{gray!6}{} & \cellcolor{gray!6}{}\\
+\hspace{1em}T32 & -0.95 & -1.23, -0.66 &  & \\
 \hspace{1em}V9 & 1.88 & -0.47, 4.24 &  & \\
-\hspace{1em}\cellcolor{gray!6}{V12} & \cellcolor{gray!6}{0.88} & \cellcolor{gray!6}{0.33, 1.43} & \cellcolor{gray!6}{} & \cellcolor{gray!6}{}\\
+\hspace{1em}V12 & 0.88 & 0.33, 1.43 &  & \\
 \hspace{1em}V1 & -1.15 & -1.97, -0.34 &  & \\
-\hspace{1em}\cellcolor{gray!6}{T13} & \cellcolor{gray!6}{-2.73} & \cellcolor{gray!6}{-4.07, -1.39} & \cellcolor{gray!6}{} & \cellcolor{gray!6}{}\\
+\hspace{1em}T13 & -2.73 & -4.07, -1.39 &  & \\
 \hspace{1em}T41 & -1.07 & -1.78, -0.37 &  & \\
-\hspace{1em}\cellcolor{gray!6}{T1} & \cellcolor{gray!6}{-0.22} & \cellcolor{gray!6}{-0.89, 0.46} & \cellcolor{gray!6}{} & \cellcolor{gray!6}{}\\
+\hspace{1em}T1 & -0.22 & -0.89, 0.46 &  & \\
 \hspace{1em}V2 & -0.24 & -0.72, 0.24 &  & \\
-\hspace{1em}\cellcolor{gray!6}{T2} & \cellcolor{gray!6}{-11.23} & \cellcolor{gray!6}{-39.45, 16.98} & \cellcolor{gray!6}{} & \cellcolor{gray!6}{}\\
+\hspace{1em}T2 & -11.23 & -39.45, 16.98 &  & \\
 \hspace{1em}V10 & -1.61 & -7.23, 4.01 &  & \\
-\hspace{1em}\cellcolor{gray!6}{T31} & \cellcolor{gray!6}{0.46} & \cellcolor{gray!6}{-0.38, 1.29} & \cellcolor{gray!6}{} & \cellcolor{gray!6}{}\\
+\hspace{1em}T31 & 0.46 & -0.38, 1.29 &  & \\
 \hspace{1em}V4 & -2.05 & -4.98, 0.87 &  & \\
-\hspace{1em}\cellcolor{gray!6}{V3} & \cellcolor{gray!6}{-0.27} & \cellcolor{gray!6}{-2.54, 2} & \cellcolor{gray!6}{} & \cellcolor{gray!6}{}\\
+\hspace{1em}V3 & -0.27 & -2.54, 2 &  & \\
 \hspace{1em}site &  &  & 0.58 & 19\\
 \addlinespace[0.3em]
 \multicolumn{5}{l}{\textbf{Zero-inflation model}}\\
-\hspace{1em}\cellcolor{gray!6}{Intercept} & \cellcolor{gray!6}{1.72} & \cellcolor{gray!6}{0.92, 2.52} & \cellcolor{gray!6}{} & \cellcolor{gray!6}{}\\
+\hspace{1em}Intercept & 1.72 & 0.92, 2.52 &  & \\
 \hspace{1em}age & 0.34 & -0.41, 1.09 &  & \\
-\hspace{1em}\cellcolor{gray!6}{site} & \cellcolor{gray!6}{} & \cellcolor{gray!6}{} & \cellcolor{gray!6}{1.53} & \cellcolor{gray!6}{19}\\
+\hspace{1em}site &  &  & 1.53 & 19\\
 \bottomrule
 \end{longtable}
 
@@ -889,27 +889,27 @@ Term & Estimate & 95\% CI & SD (Intercept) & N\\
 \midrule
 \addlinespace[0.3em]
 \multicolumn{5}{l}{\textbf{Conditional model}}\\
-\hspace{1em}\cellcolor{gray!6}{Intercept} & \cellcolor{gray!6}{-4.78} & \cellcolor{gray!6}{-5.44, -4.12} & \cellcolor{gray!6}{} & \cellcolor{gray!6}{}\\
+\hspace{1em}Intercept & -4.78 & -5.44, -4.12 &  & \\
 \hspace{1em}age & -0.53 & -1.56, 0.5 &  & \\
-\hspace{1em}\cellcolor{gray!6}{bio01} & \cellcolor{gray!6}{-1.90} & \cellcolor{gray!6}{-2.67, -1.13} & \cellcolor{gray!6}{} & \cellcolor{gray!6}{}\\
+\hspace{1em}bio01 & -1.90 & -2.67, -1.13 &  & \\
 \hspace{1em}bio19 & -1.93 & -3.02, -0.83 &  & \\
-\hspace{1em}\cellcolor{gray!6}{relelev} & \cellcolor{gray!6}{0.48} & \cellcolor{gray!6}{0.39, 0.57} & \cellcolor{gray!6}{} & \cellcolor{gray!6}{}\\
+\hspace{1em}relelev & 0.48 & 0.39, 0.57 &  & \\
 \hspace{1em}T45 & -0.72 & -1.22, -0.23 &  & \\
-\hspace{1em}\cellcolor{gray!6}{artificial} & \cellcolor{gray!6}{2.30} & \cellcolor{gray!6}{2, 2.6} & \cellcolor{gray!6}{} & \cellcolor{gray!6}{}\\
+\hspace{1em}artificial & 2.30 & 2, 2.6 &  & \\
 \hspace{1em}T44 & -1.56 & -3.16, 0.05 &  & \\
-\hspace{1em}\cellcolor{gray!6}{T32} & \cellcolor{gray!6}{0.56} & \cellcolor{gray!6}{0.22, 0.89} & \cellcolor{gray!6}{} & \cellcolor{gray!6}{}\\
+\hspace{1em}T32 & 0.56 & 0.22, 0.89 &  & \\
 \hspace{1em}V9 & -0.84 & -2.25, 0.57 &  & \\
-\hspace{1em}\cellcolor{gray!6}{T34} & \cellcolor{gray!6}{1.06} & \cellcolor{gray!6}{0.62, 1.5} & \cellcolor{gray!6}{} & \cellcolor{gray!6}{}\\
+\hspace{1em}T34 & 1.06 & 0.62, 1.5 &  & \\
 \hspace{1em}V1 & -0.25 & -1.54, 1.04 &  & \\
-\hspace{1em}\cellcolor{gray!6}{T41} & \cellcolor{gray!6}{-3.11} & \cellcolor{gray!6}{-4.35, -1.88} & \cellcolor{gray!6}{} & \cellcolor{gray!6}{}\\
+\hspace{1em}T41 & -3.11 & -4.35, -1.88 &  & \\
 \hspace{1em}T1 & -0.73 & -2.23, 0.77 &  & \\
-\hspace{1em}\cellcolor{gray!6}{V2} & \cellcolor{gray!6}{-0.91} & \cellcolor{gray!6}{-5.31, 3.5} & \cellcolor{gray!6}{} & \cellcolor{gray!6}{}\\
+\hspace{1em}V2 & -0.91 & -5.31, 3.5 &  & \\
 \hspace{1em}T17 & 6.09 & 5.47, 6.71 &  & \\
-\hspace{1em}\cellcolor{gray!6}{site} & \cellcolor{gray!6}{} & \cellcolor{gray!6}{} & \cellcolor{gray!6}{0.86} & \cellcolor{gray!6}{15}\\
+\hspace{1em}site &  &  & 0.86 & 15\\
 \addlinespace[0.3em]
 \multicolumn{5}{l}{\textbf{Zero-inflation model}}\\
 \hspace{1em}Intercept & -0.36 & -1.62, 0.9 &  & \\
-\hspace{1em}\cellcolor{gray!6}{age} & \cellcolor{gray!6}{0.29} & \cellcolor{gray!6}{-0.83, 1.41} & \cellcolor{gray!6}{} & \cellcolor{gray!6}{}\\
+\hspace{1em}age & 0.29 & -0.83, 1.41 &  & \\
 \hspace{1em}site &  &  & 1.24 & 15\\
 \bottomrule
 \end{longtable}
@@ -923,23 +923,23 @@ Term & Estimate & 95\% CI & SD (Intercept) & N\\
 \midrule
 \addlinespace[0.3em]
 \multicolumn{5}{l}{\textbf{Conditional model}}\\
-\hspace{1em}\cellcolor{gray!6}{Intercept} & \cellcolor{gray!6}{-7.11} & \cellcolor{gray!6}{-8.9, -5.31} & \cellcolor{gray!6}{} & \cellcolor{gray!6}{}\\
+\hspace{1em}Intercept & -7.11 & -8.9, -5.31 &  & \\
 \hspace{1em}age & 0.46 & -1.24, 2.15 &  & \\
-\hspace{1em}\cellcolor{gray!6}{bio19} & \cellcolor{gray!6}{-1.73} & \cellcolor{gray!6}{-3.46, 0.01} & \cellcolor{gray!6}{} & \cellcolor{gray!6}{}\\
+\hspace{1em}bio19 & -1.73 & -3.46, 0.01 &  & \\
 \hspace{1em}relelev & 0.92 & 0.49, 1.34 &  & \\
-\hspace{1em}\cellcolor{gray!6}{artificial} & \cellcolor{gray!6}{4.64} & \cellcolor{gray!6}{3.81, 5.47} & \cellcolor{gray!6}{} & \cellcolor{gray!6}{}\\
+\hspace{1em}artificial & 4.64 & 3.81, 5.47 &  & \\
 \hspace{1em}T34 & 3.30 & 2.28, 4.31 &  & \\
-\hspace{1em}\cellcolor{gray!6}{V1} & \cellcolor{gray!6}{0.51} & \cellcolor{gray!6}{-0.4, 1.41} & \cellcolor{gray!6}{} & \cellcolor{gray!6}{}\\
+\hspace{1em}V1 & 0.51 & -0.4, 1.41 &  & \\
 \hspace{1em}T1 & 5.00 & 3.36, 6.64 &  & \\
-\hspace{1em}\cellcolor{gray!6}{T40} & \cellcolor{gray!6}{2.90} & \cellcolor{gray!6}{2.36, 3.44} & \cellcolor{gray!6}{} & \cellcolor{gray!6}{}\\
+\hspace{1em}T40 & 2.90 & 2.36, 3.44 &  & \\
 \hspace{1em}T30 & 3.74 & 1.56, 5.91 &  & \\
-\hspace{1em}\cellcolor{gray!6}{V8} & \cellcolor{gray!6}{1.52} & \cellcolor{gray!6}{-2.08, 5.12} & \cellcolor{gray!6}{} & \cellcolor{gray!6}{}\\
+\hspace{1em}V8 & 1.52 & -2.08, 5.12 &  & \\
 \hspace{1em}V3 & -1.82 & -3.17, -0.47 &  & \\
-\hspace{1em}\cellcolor{gray!6}{site} & \cellcolor{gray!6}{} & \cellcolor{gray!6}{} & \cellcolor{gray!6}{1.96} & \cellcolor{gray!6}{6}\\
+\hspace{1em}site &  &  & 1.96 & 6\\
 \addlinespace[0.3em]
 \multicolumn{5}{l}{\textbf{Zero-inflation model}}\\
 \hspace{1em}Intercept & -0.16 & -0.49, 0.18 &  & \\
-\hspace{1em}\cellcolor{gray!6}{age} & \cellcolor{gray!6}{-0.08} & \cellcolor{gray!6}{-0.41, 0.26} & \cellcolor{gray!6}{} & \cellcolor{gray!6}{}\\
+\hspace{1em}age & -0.08 & -0.41, 0.26 &  & \\
 \hspace{1em}site &  &  & 0.00 & 6\\
 \bottomrule
 \end{longtable}
